--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -127,7 +127,7 @@
     <servlet-name>RedirectSignature</servlet-name>
     <url-pattern>/RedirectSignature</url-pattern>
   </servlet-mapping>
-   <servlet>
+  <servlet>
     <description></description>
     <display-name>AddSignaturePDF</display-name>
     <servlet-name>AddSignaturePDF</servlet-name>
@@ -136,5 +136,15 @@
   <servlet-mapping>
     <servlet-name>AddSignaturePDF</servlet-name>
     <url-pattern>/AddSignaturePDF</url-pattern>
+  </servlet-mapping>
+   <servlet>
+    <description></description>
+    <display-name>InfosPDF</display-name>
+    <servlet-name>InfosPDF</servlet-name>
+    <servlet-class>servlets.InfosPDF</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>InfosPDF</servlet-name>
+    <url-pattern>/InfosPDF</url-pattern>
   </servlet-mapping>
 </web-app>
