--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -168,4 +168,16 @@
     <servlet-name>ConfigBackEndConstants</servlet-name>
     <url-pattern>/ConfigBackEndConstants</url-pattern>
   </servlet-mapping>
+  
+  <servlet>
+    <description></description>
+    <display-name>ShowLogs</display-name>
+    <servlet-name>ShowLogs</servlet-name>
+    <servlet-class>servlets.ShowLogs</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ShowLogs</servlet-name>
+    <url-pattern>/ShowLogs</url-pattern>
+  </servlet-mapping>
+
 </web-app>
