--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -157,7 +157,6 @@
     <servlet-name>SaveSignatures</servlet-name>
     <url-pattern>/SaveSignatures</url-pattern>
   </servlet-mapping>
-  
   <servlet>
     <description></description>
     <display-name>ConfigBackEndConstants</display-name>
@@ -168,7 +167,6 @@
     <servlet-name>ConfigBackEndConstants</servlet-name>
     <url-pattern>/ConfigBackEndConstants</url-pattern>
   </servlet-mapping>
-  
   <servlet>
     <description></description>
     <display-name>ShowLogs</display-name>
@@ -179,5 +177,14 @@
     <servlet-name>ShowLogs</servlet-name>
     <url-pattern>/ShowLogs</url-pattern>
   </servlet-mapping>
-
+   <servlet>
+    <description></description>
+    <display-name>SendBase64PDF</display-name>
+    <servlet-name>SendBase64PDF</servlet-name>
+    <servlet-class>servlets.SendBase64PDF</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SendBase64PDF</servlet-name>
+    <url-pattern>/SendBase64PDF</url-pattern>
+  </servlet-mapping>
 </web-app>
