Modifications: 	-> Résolution du bug de l'onglet Types: autorité par défaut = ""; et il faut remplir le formulaire de l'autorité de certification pour en afficher la liste des types de certification.

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -217,4 +217,14 @@
     <servlet-name>UpdateDocumentCertificationType</servlet-name>
     <url-pattern>/UpdateDocumentCertificationType</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>TypeCertifConfig</display-name>
+    <servlet-name>TypeCertifConfig</servlet-name>
+    <servlet-class>servlets.TypeCertifConfig</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>TypeCertifConfig</servlet-name>
+    <url-pattern>/TypeCertifConfig</url-pattern>
+  </servlet-mapping>
 </web-app>
